# seconds_formatter

./: README.md  pyproject.toml
seconds_formatter/: __init__.py  seconds_formatter.py
