[project]
name = "seconds_formatter"
version = "0.0.1"
description = "⏱️ Formatter from seconds to various convenient formats"
dependencies = [
    "test_functions @ git+https://github.com/gvlassis/test_functions.git"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
